<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.github.belarus</groupId>
	<artifactId>linguistics.korpus</artifactId>
	<packaging>pom</packaging>
	<version>1.0.0</version>

	<modules>
		<module>Common</module>
		<module>Parsers</module>
		<module>Web</module>
		<module>WebDataPrepare</module>
		<module>WebService-Korpus</module>
		<module>WebService-Other</module>
	</modules>

	<properties>
		<java.version>25</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!--dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>2.20</version>
			</dependency-->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.21.2</version>
			</dependency>
			<dependency>
				<groupId>org.freemarker</groupId>
				<artifactId>freemarker</artifactId>
				<version>2.3.34</version>
			</dependency>
			<dependency>
				<groupId>io.javalin</groupId>
				<artifactId>javalin</artifactId>
				<version>7.2.2</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>2.0.18</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
